--- a/CG-gh-pages/T2/trabalho.html
+++ b/CG-gh-pages/T2/trabalho.html
@@ -5,7 +5,7 @@
     <title>T3</title>
 
     <link rel="shortcut icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../html/resources/default.css">
+    <link rel="stylesheet" href="trabalho.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -19,6 +19,13 @@
     <div id="webgl-output">
         <script type="module" src="trabalho.js"></script>
     </div>
+    <div id="image1"><img src="assets/keys/blueKey.png" alt="chave azul"></div>
+    <div id="image2"><img src="assets/keys/redKey.png" alt="chave vermelha"></div>
+    <div id="image3"><img src="assets/keys/yellowKey.png" alt="chave amarela"></div>
+    <div id="keyCount1"><img src="key.obj" alt="conta chaves"> </div>
+    <div id="keyCount2"><img src="key.obj" alt="conta chaves"> </div>
+    <div id="keyCount3"><img src="key.obj" alt="conta chaves"> </div>
+    <div id="test">Test Mode</div>
 </body>
 
 </html>
